tests/compile_fail/invalid_animation_iteration_number_literal.rs
use surgeist_style::AnimationIterationNumber;

fn main() {
    let _count = AnimationIterationNumber { value: 1.0 };
}
